--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,3 +14,4 @@ License: Everybody is free to use and distribute the code if they cite the origi
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.0.1
+Imports: testit
